Added prepublish script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tmp promise wrappers",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha ."
+    "test": "./node_modules/mocha/bin/mocha .",
+    "prepublish": "npm test"
   },
   "repository": {
     "type": "git",
