--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "with-tmp-dir",
+  "name": "tmp-promise",
   "version": "1.0.0",
-  "description": "tmp promise wrappers",
+  "description": "Utilities to use tmp temporary directories with promise-based code",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha .",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Rapidfacture/with-tmp-dir.git"
+    "url": "git+https://github.com/Rapidfacture/tmp-promise.git"
   },
   "author": "Rapidfacture GmbH",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Rapidfacture/with-tmp-dir/issues"
+    "url": "https://github.com/Rapidfacture/tmp-promise/issues"
   },
-  "homepage": "https://github.com/Rapidfacture/with-tmp-dir/blob/master/README.md",
+  "homepage": "https://github.com/Rapidfacture/tmp-promise/blob/master/README.md",
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
